--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,7 +47,22 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+   --animate-appear: appear 1s ease-in-out;
+  --animate-slide: slide 750ms ease-in-out;
 }
+
+@keyframes appear {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+@keyframes slide {
+  from { transform: translateX(100%); }
+  to { transform: translateX(0%); }
+}
+
+
+
 
 :root {
   --radius: 0.625rem;
